// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: right;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2>code {
  color: #016BF8;
}

.emotion-2::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-2:focus .emotion-2::after {
  background-color: #0498EC;
}

.emotion-2:hover::after {
  background-color: #E8EDEB;
}

.emotion-3 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: left;
}

.emotion-4 {
  display: inline-block;
  width: 270px;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      ←  
    </span>
    <a
      class="emotion-2 emotion-3"
      href="/drivers/csharp/"
      title="Previous Section"
    >
      <span
        class="emotion-4"
      >
        MongoDB C#/.NET Driver
      </span>
    </a>
    <a
      class="emotion-2 emotion-1"
      href="/drivers/java/"
      title="Next Section"
    >
      <span
        class="emotion-4"
      >
        Java MongoDB Driver
      </span>
    </a>
    <span
      class="emotion-3"
    >
       →
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: right;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2>code {
  color: #016BF8;
}

.emotion-2::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-2:focus .emotion-2::after {
  background-color: #0498EC;
}

.emotion-2:hover::after {
  background-color: #E8EDEB;
}

.emotion-3 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: left;
}

.emotion-4 {
  display: inline-block;
  width: 270px;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      ←  
    </span>
    <a
      class="emotion-2 emotion-3"
      href="/drivers/go/"
      title="Previous Section"
    >
      <span
        class="emotion-4"
      >
        MongoDB Go Driver
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-1:focus .emotion-1::after {
  background-color: #0498EC;
}

.emotion-1:hover::after {
  background-color: #E8EDEB;
}

.emotion-2 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: right;
}

.emotion-3 {
  display: inline-block;
  width: 270px;
}

.emotion-4 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: left;
}

<div
    class="emotion-0"
  >
    <a
      class="emotion-1 emotion-2"
      href="/drivers/go/"
      title="Next Section"
    >
      <span
        class="emotion-3"
      >
        MongoDB Go Driver
      </span>
    </a>
    <span
      class="emotion-4"
    >
       →
    </span>
  </div>
</DocumentFragment>
`;
